crates/cockpitctl-domain/tests/snapshots/snapshot_tests__capped_findings.snap
---
source: crates/cockpitctl-domain/tests/snapshot_tests.rs
expression: capped
---
[
  {
    "severity": "error",
    "code": "E1",
    "message": "Message for E1",
    "location": {
      "path": "src/a.rs",
      "line": 1
    }
  },
  {
    "severity": "error",
    "code": "E2",
    "message": "Message for E2",
    "location": {
      "path": "src/a.rs",
      "line": 2
    }
  }
]
