crates/cockpitctl-domain/tests/snapshots/snapshot_tests__compute_counts.snap
---
source: crates/cockpitctl-domain/tests/snapshot_tests.rs
expression: counts
---
{
  "info": 2,
  "warn": 1,
  "error": 2
}
