crates/cockpitctl-domain/tests/snapshots/snapshot_tests__overall_verdict_all_pass.snap
---
source: crates/cockpitctl-domain/tests/snapshot_tests.rs
expression: verdict
---
{
  "status": "pass",
  "counts": {
    "info": 0,
    "warn": 0,
    "error": 0
  },
  "reasons": []
}
