crates/cockpitctl-domain/tests/snapshots/snapshot_tests__overall_verdict_blocking_fail.snap
---
source: crates/cockpitctl-domain/tests/snapshot_tests.rs
expression: verdict
---
{
  "status": "fail",
  "counts": {
    "info": 2,
    "warn": 0,
    "error": 3
  },
  "reasons": []
}
