crates/cockpitctl-domain/tests/snapshots/snapshot_tests__overall_verdict_mixed_blocking_nonblocking.snap
---
source: crates/cockpitctl-domain/tests/snapshot_tests.rs
expression: verdict
---
{
  "status": "warn",
  "counts": {
    "info": 0,
    "warn": 3,
    "error": 10
  },
  "reasons": []
}
