crates/cockpitctl-domain/tests/snapshots/snapshot_tests__overall_verdict_nonblocking_ignored.snap
---
source: crates/cockpitctl-domain/tests/snapshot_tests.rs
expression: verdict
---
{
  "status": "pass",
  "counts": {
    "info": 0,
    "warn": 0,
    "error": 5
  },
  "reasons": []
}
