crates/cockpitctl-domain/tests/snapshots/snapshot_tests__overall_verdict_warn_is_fail.snap
---
source: crates/cockpitctl-domain/tests/snapshot_tests.rs
expression: verdict
---
{
  "status": "fail",
  "counts": {
    "info": 0,
    "warn": 2,
    "error": 0
  },
  "reasons": [
    "warn_is_fail"
  ]
}
